[package]
name = "rgx-lyon"
version = "0.1.1"
authors = ["Jonathan Johnson <jon@khonsulabs.com>"]
edition = "2018"
description = "A 2d graphics pipeline for rgx utilizing lyon"
readme = "./README.md"
license = "MIT"
keywords = ["rgx", "lyon", "2d", "graphics"]
categories = ["graphics"]

[dependencies]
rgx = { version = "0.8", features = ["renderer"] }
lyon_tessellation = "0.16"

[dev-dependencies]
winit = "0.22"
